--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "lodash.debounce": "^4.0.8",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
